--- a/docker-compose-single-datanode.yml
+++ b/docker-compose-single-datanode.yml
@@ -3,31 +3,47 @@ services:
   namenode:
     image: $IMAGE_REPO:$IMAGE_TAG
     environment:
-    - HDFS_CONF_dfs_replication=1
+      - HDFS_CONF_dfs_webhdfs_enabled=1
+      - HDFS_CONF_dfs_replication=1
+      - HDFS_CONF_dfs_permissions_enabled=false
     volumes:
-    - name:/hadoop/dfs
+      - name:/hadoop/dfs
     command:
-    - namenode
+      - namenode
     ports:
-    - 8020:8020
-    - 50070:50070
-    - 9870:9870
-    networks:
-    - hdfs
+      - 8020:8020
+      - 50070:50070
+      - 9870:9870
+      - 50075:50075
+    network_mode: "host"
+
+ 
+
   datanode-0:
     image: $IMAGE_REPO:$IMAGE_TAG
     environment:
-    - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
-    - HDFS_CONF_dfs_replication=1
+      - CORE_CONF_fs_defaultFS=hdfs://0.0.0.0:8020
+      - HDFS_CONF_dfs_replication=1
+      - HDFS_CONF_dfs_webhdfs_enabled=1
     volumes:
-    - data-0:/hadoop/dfs
+      - data-0:/hadoop/dfs
     command:
-    - datanode
-    networks:
-    - hdfs
+      - datanode
+    network_mode: "host"
+
 volumes:
   data-0:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /sandbox/hdfs/datanode
   name:
+    driver: local
+    driver_opts:
+      type: none
+      o: bind
+      device: /sandbox/hdfs/namenode
 
 networks:
   hdfs:
