--- a/docker-compose-namenode-datanode.yml
+++ b/docker-compose-namenode-datanode.yml
@@ -1,7 +1,7 @@
 version: '3'
 services:
   namenode:
-    image: $IMAGE_REPO:$IMAGE_TAG
+    image: $IMAGE_REPO:$IMAGE_TAG_WSL
     environment:
       - HDFS_CONF_dfs_webhdfs_enabled=1
       - HDFS_CONF_dfs_replication=1
@@ -10,17 +10,12 @@ services:
       - name:/hadoop/dfs
     command:
       - namenode
-    ports:
-      - 8020:8020
-      - 50070:50070
-      - 9870:9870
-      - 50075:50075
     network_mode: "host"
 
  
 
   datanode-0:
-    image: $IMAGE_REPO:$IMAGE_TAG
+    image: $IMAGE_REPO:$IMAGE_TAG_WSL
     environment:
       - CORE_CONF_fs_defaultFS=hdfs://0.0.0.0:8020
       - HDFS_CONF_dfs_replication=1
@@ -32,18 +27,18 @@ services:
     network_mode: "host"
 
 volumes:
+  
   data-0:
-    driver: local
     driver_opts:
-      type: none
-      o: bind
-      device: /sandbox/hdfs/datanode
+      type: cifs
+      o: username=${CIFS_USERNAME},password=${CIFS_PASSWORD}
+      device: //192.168.14.1/sandbox/hdfs/datanode
+      
   name:
-    driver: local
     driver_opts:
-      type: none
-      o: bind
-      device: /sandbox/hdfs/namenode
+      type: cifs
+      o: username=${CIFS_USERNAME},password=${CIFS_PASSWORD}
+      device: //192.168.14.1/sandbox/hdfs/namenode
 
 networks:
   hdfs:
