--- a/docker-compose-outside-datanode.yml
+++ b/docker-compose-outside-datanode.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
   datanode-0:
-    image: $IMAGE_REPO:$IMAGE_TAG
+    image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://192.168.14.1:8020
+      - CORE_CONF_fs_defaultFS=hdfs://192.168.0.210:8020
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_webhdfs_enabled=1
     volumes:
