--- a/.env
+++ b/.env
@@ -1,2 +1,5 @@
 IMAGE_REPO=guhzantut/raspi-hdfs
-IMAGE_TAG=latest
+IMAGE_TAG_WSL=wsl-latest
+IMAGE_TAG_RASPI=raspi-latest
+CIFS_USERNAME=cluster
+CIFS_PASSWORD=10256589
