--- a/docker-compose-outside-datanode.yml
+++ b/docker-compose-outside-datanode.yml
@@ -6,6 +6,7 @@ services:
       - CORE_CONF_fs_defaultFS=hdfs://192.168.0.210:8020
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_webhdfs_enabled=1
+      - MULTIHOMED_NETWORK=1
     volumes:
       - data-0:/hadoop/dfs
     command:
