--- a/docker-compose-outside-datanode.yml
+++ b/docker-compose-outside-datanode.yml
@@ -17,4 +17,4 @@ volumes:
     driver_opts:
       type: none
       o: bind
-      device: /sandbox/hdfs/datanode1
+      device: /sandbox/hdfs/datanode
