--- a/docker-compose-namenode-datanode.yml
+++ b/docker-compose-namenode-datanode.yml
@@ -1,9 +1,9 @@
 version: '3'
 services:
   namenode:
-    image: $IMAGE_REPO:$IMAGE_TAG_WSL
+    image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://192.168.0.210:8020
+      - CORE_CONF_fs_defaultFS=hdfs://192.168.0.101:8020
       - HDFS_CONF_dfs_webhdfs_enabled=1
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_permissions_enabled=false
@@ -13,12 +13,12 @@ services:
       - namenode
     ports:
       - 8020:8020
-      - 50070:50070
-      - 1225:9870
-      - 50075:50075
+      - 55070:50070
+      - 9870:9870
+      - 55075:50075
 
   datanode-0:
-    image: $IMAGE_REPO:$IMAGE_TAG_WSL
+    image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
       - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
       - HDFS_CONF_dfs_replication=1
@@ -29,15 +29,16 @@ services:
       - datanode
 
 volumes:
-  
   data-0:
+    driver: local
     driver_opts:
-      type: cifs
-      o: username=${CIFS_USERNAME},password=${CIFS_PASSWORD}
-      device: //192.168.14.1/sandbox/hdfs/datanode
+      type: none
+      o: bind
+      device: /sandbox/hdfs/datanode
       
   name:
+    driver: local
     driver_opts:
-      type: cifs
-      o: username=${CIFS_USERNAME},password=${CIFS_PASSWORD}
-      device: //192.168.14.1/sandbox/hdfs/namenode
+      type: none
+      o: bind
+      device: /sandbox/hdfs/namenode
