--- a/docker-compose-namenode-datanode-raspi.yml
+++ b/docker-compose-namenode-datanode-raspi.yml
@@ -11,12 +11,16 @@ services:
       - name:/hadoop/dfs
     command:
       - namenode
-    network_mode: "host"
+    ports:
+      - 8020:8020
+      - 55070:50070
+      - 9870:9870
+      - 55075:50075
 
   datanode-0:
     image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://192.168.0.101:8020
+      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_webhdfs_enabled=1
     volumes:
