--- a/docker-compose-namenode-datanode-raspi.yml
+++ b/docker-compose-namenode-datanode-raspi.yml
@@ -3,7 +3,6 @@ services:
   namenode:
     image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://192.168.0.101:8020
       - HDFS_CONF_dfs_webhdfs_enabled=1
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_permissions_enabled=false
@@ -11,22 +10,19 @@ services:
       - name:/hadoop/dfs
     command:
       - namenode
-    ports:
-      - 8020:8020
-      - 55070:50070
-      - 9870:9870
-      - 55075:50075
+    network_mode: "host"
 
   datanode-0:
     image: $IMAGE_REPO:$IMAGE_TAG_RASPI
     environment:
-      - CORE_CONF_fs_defaultFS=hdfs://namenode:8020
+      - CORE_CONF_fs_defaultFS=hdfs://0.0.0.0:8020
       - HDFS_CONF_dfs_replication=1
       - HDFS_CONF_dfs_webhdfs_enabled=1
     volumes:
       - data-0:/hadoop/dfs
     command:
       - datanode
+    network_mode: "host"
 
 volumes:
   data-0:
